crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__control__templatetags__order_overview.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.control.templatetags.order_overview::filter::togglesum":
    expects_arg: true
    arg_optional: true
block_specs: {}
